--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,7 @@
-.select-category {
+body {
+  background-color: #1B1919;
+}
+.container {
   font-family: 'Crimson Text', serif;
 }
 
@@ -25,8 +28,29 @@
   height: auto;
 }
 
+header {
+  font-family: 'Playball', cursive, bold;
+  color: #D3C20B;
+  padding-top: 1%;
+  padding-bottom: 2%;
+}
+
+/* .img-home {
+  max-width: 100%;
+  height: 30%;
+} */
 
 #map {
-  height: 300px;
   margin: 0;
+  height: 300px;
+  width: 90%;
+  align-items: center;
+}
+
+.btn-light {
+  background-color: #EFE038;
+}
+
+.filter-options {
+  color: #FBFBFB;
 }
